added auth features
