# routes/auth.js
@@ -3,7 +3,8 @@ const authController = require('../controllers/authController');
 const router = express.Router();
 const passport = require('passport');
 
-router.post('/register', authController.register);
+// router.post('/register', authController.register);
+
 router.post('/login', authController.login);
 router.get('/logout', authController.logout);
 
@@ -14,10 +15,11 @@ router.get('/google', (req, res) => {
 
 router.get('/google/callback', passport.authenticate('google', { failureRedirect: '/login' }), (req, res) => {
     req.session.user = req.user;
-    res.status(200).json({ message: 'Logged in with Google successfully' });
+    res.redirect('/auth/google'); // Redirect to a page after logout
+    //res.status(200).json({ message: 'Logged in with Google successfully' });
 });
 
-router.get('/google/logout', authController.googleLogout);
+// router.get('/google/logout', authController.googleLogout);
 // router.get('/protected', authController.protectedRoute);
 
 module.exports = router;
